# Qt-Grpc-Demo

./: CMakeLists.txt  README.md  bloodnewwindows.cpp  bloodnewwindows.h  bloodnewwindows.ui  chart.cpp  chart.h  communication.grpc.pb.h  communication.pb.cc  frontendwiki.md  ip.txt  loading.h  loading.ui  main.cpp  map.cpp  map.h  map.ui  test.ui  velocitynewwindows.cpp  velocitynewwindows.h  velocitynewwindows.ui  widget.cpp  widget.h  widget.ui  widget.ui.autosave
proto/: communication.grpc.pb.cc  communication.grpc.pb.h  communication.pb.cc  communication.pb.h  communication.proto
